--- a/application/admin/view/Base/footer.html
+++ b/application/admin/view/Base/footer.html
@@ -1,10 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
+<script type="text/javascript" src="__PUBLIC__/layui/layui.js"></script>
+<script type="text/javascript" src="__PUBLIC__/js/leftNav.js"></script>
+<script type="text/javascript" src="__PUBLIC__/js/index.js"></script>
 </html>
