--- a/application/admin/view/Base/footer.html
+++ b/application/admin/view/Base/footer.html
@@ -1,4 +1,5 @@
 <script type="text/javascript" src="__PUBLIC__/layui/layui.js"></script>
 <script type="text/javascript" src="__PUBLIC__/js/leftNav.js"></script>
 <script type="text/javascript" src="__PUBLIC__/js/index.js"></script>
+<script src="__PUBLIC__/js/info.js"></script>
 </html>
